# 2023-ICTP-Collaborative-programming-school

./: README.md
day_02/titanic/: titanic_altair.py  titanic_matplotlib.py  titanic_pandas.py
day_04/: resolve_captcha.py
day_05/: slider_demo.py
day_06/: anim.py  link_to_ci_repository.txt
day_06/UT/: test_standalone.py
day_06/UT/problems/0_factorial/: test_factorial.py
day_06/UT/problems/1_factorial_fixtures/: test_factorial_fixture.py
day_06/UT/problems/2_class/: accumulator.py
day_06/UT/problems/3_wallet/: README.txt
day_06/UT/problems/4_palindrome/: test_palindrome.py
day_07/: pyproject.toml
day_07/Makefile_examples/2_paper1/: Makefile_1  Makefile_2  Makefile_3  Makefile_4  paper1.tex
day_07/Makefile_examples/3_paper2/: paper2.tex
day_07/Makefile_examples/4_paper2_bib/: Fig1gen.py  funcs.py
day_09/SphinxExample/: README.md
day_09/SphinxExample/files/: module1.py
day_09/SphinxExample/files/source/: req.rst
